[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Sigve Indregard <sigve@indregard.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
itertools = "0.8.2"
regex = "1"
countmap = "0.2.0"
num = "0.3.1"
